[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentkit"
version = "0.1.0"
description = "Prompt-driven time-series analysis Agent (Stage 1)"
authors = [{ name = "Student", email = "student@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "pydantic>=2.0.0",
  "colorama>=0.4.6",
  "requests>=2.31.0"
]

[project.optional-dependencies]
local = [
  "transformers>=4.35.0",
  "torch>=2.0.0",
  "accelerate>=0.24.0",
  "sentencepiece>=0.2.1"
]

[project.scripts]
agent-chat = "cli:main"

[tool.setuptools]
# 明确指定只打包agentkit，排除数据目录和示例
packages = ["agentkit"]
package-dir = { agentkit = "agentkit" }


